--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ footer {
     padding-bottom: 40px;
 }
 
-.tskf-header-font {
+.tskf-header-font,h1 {
     font-family: 'Roboto Slab', serif;
 }
 
@@ -44,6 +44,23 @@ footer {
 .tskf-icons-holder > div > a > img {
     padding: 5px;
     height: 40px;
+}
+
+.data{
+    padding : 2%;
+}
+.image{
+    width:100%;
+}
+.icon li{
+    display: inline-block;
+    margin : 4%;
+}
+.icon-card{
+    border-radius: 10px;
+    width:300px;
+    height:300px;
+    padding:2%;
 }
 
 @media only screen and (max-width: 992px) {
