--- a/css/index.css
+++ b/css/index.css
@@ -127,6 +127,11 @@ footer {
     width: 50vw;
 }
 
+.logo-tskf {
+    max-height: 55px;
+    margin-top: 5px;
+}
+
 @media only screen and (max-width: 992px) {
     .tskf-icons-holder {
         height: 80px;
@@ -142,5 +147,9 @@ footer {
 
     .landing-header-sub {
         font-size: 2em;
+    }
+
+    .logo-tskf {
+        max-height: 45px;
     }
 }
