--- a/css/index.css
+++ b/css/index.css
@@ -78,16 +78,49 @@ footer {
     font-family: 'Roboto Slab', serif;
 }
 
+.text {
+    font-size: 1.4em;
+    text-align: justify;
+    color: black;
+}
+
+.myellow {
+    padding: 4px 0px;
+    background: #fbc02d;
+
+    /* For the left and right padding */
+    /* Vendor prefixes FIRST */
+    -webkit-box-shadow: 8px 0 0 #fbc02d, -8px 0 0 #fbc02d;
+       -moz-box-shadow: 8px 0 0 #fbc02d, -8px 0 0 #fbc02d;
+            box-shadow: 8px 0 0 #fbc02d, -8px 0 0 #fbc02d;
+
+    /* Firefox defaults to `box-decoration-break: split`, we need `clone` */
+    box-decoration-break: clone; 
+}
+
 .landing-image {
-    max-height: 60vh;
+    max-height: 80vh;
     padding: 10px;
     border: 4px solid #fbc02d;
+}
+
+.landing-container, .container {
+    width: 85% !important;
+}
+
+.landing-container .landing-header {
+    line-height: 1.2;
+    padding-top: 10%;
+}
+
+.landing-container a, .navbar-fixed a {
+    font-family: 'Roboto Slab', serif;
+    font-weight: 700 !important;
 }
 
 .landing-window {
     margin-top: 5vh;
 }
-
 
 .landing-header-main, .landing-header-sub {
     font-family: 'Roboto Slab', serif;
@@ -105,6 +138,7 @@ footer {
 
 .landing-text-col {
     margin-top: 3vh;
+    z-index: 10;
 }
 
 .landing-text-col > .row {
@@ -117,11 +151,24 @@ footer {
     color: black;
     line-height: 1.4;
     padding-left: 5px;
+    width: 150% !important;
+    line-height: 1.2;
+}
+
+.landing-descp span {
+    /* For the left and right padding */
+    /* Vendor prefixes FIRST */
+    -webkit-box-shadow: 4px 0 0 white, -4px 0 0 white;
+       -moz-box-shadow: 4px 0 0 white, -4px 0 0 white;
+            box-shadow: 4px 0 0 white, -4px 0 0 white;
+
+    /* Firefox defaults to `box-decoration-break: split`, we need `clone` */
+    box-decoration-break: clone; 
 }
 
 .landing-know-more-btn {
     border-radius: 20px;
-    color: #f57f17;
+    color: #fbc02d;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -153,7 +200,12 @@ footer {
     .tskf-icons-holder {
         height: 80px;
     }
+
+    .landing-descp {
+        width: 100% !important;
+    }
 }
+
 /*@media only screen and (max-width: 35em){
     .content
     {
