--- a/css/index.css
+++ b/css/index.css
@@ -13,9 +13,21 @@ footer {
     font-size: 4rem;
 }
 
+/*.tskf-module-icon{
+    box-sizing: border-box;
+    width:25px;
+    height:25px;
+    padding: 25px;
+}*/
+
 .tskf-team-img {
     width: 250px;
     height: 250px;
+}
+
+.tskf-team-container{
+   /* box-sizing: border-box;*/
+    margin:  25px 0px 25px 0px;
 }
 
 .tskf-team-row {
@@ -62,10 +74,17 @@ footer {
 }
 .icon-card{
     border-radius: 10px;
-    width:300px;
-    height:300px;
-    padding:2%;
+    width:250px;
+    height:250px;
+    padding:6%;
     box-sizing: border-box;
+}
+
+.icon-image{
+    box-sizing: border-box;
+    height: 160px;
+    width: 160px;
+    /*padding: 10%;*/
 }
 
 .nav-wrapper > ul > li > a {
